--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Ресторан / Нетология</title>
 
-    <link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">    
-    <link rel="stylesheet" href="/dist/app.css">
+    <link rel="stylesheet" href="/src/template/app.css">
   </head>
   <body>
     <ng-view></ng-view>
