--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ресторан / Нетология</title>
 
-    <link rel="stylesheet" href="/src/template/app.css">
+    <link rel="stylesheet" href="/public/template/app.css">
   </head>
   <body>
     <ng-view></ng-view>
@@ -19,12 +19,12 @@
     <script src="/node_modules/angular-animate/angular-animate.js"></script>
     <script src="/node_modules/angular-material/angular-material.js"></script> 
 
-    <script src="/src/app.js"></script>
-    <script src="/src/module/auth/index.js"></script>
-    <script src="/src/module/profile/index.js"></script>
-    <script src="/src/module/orders/index.js"></script>
-    <script src="/src/module/menu/index.js"></script>
-    <script src="/src/module/customer/index.js"></script>
-    <script src="/src/module/kitchen/index.js"></script>
+    <script src="/public/app.js"></script>
+    <script src="/public/module/auth/index.js"></script>
+    <script src="/public/module/profile/index.js"></script>
+    <script src="/public/module/orders/index.js"></script>
+    <script src="/public/module/menu/index.js"></script>
+    <script src="/public/module/customer/index.js"></script>
+    <script src="/public/module/kitchen/index.js"></script>
   </body>
 </html>
